--- a/Admin.Dashboard/Views/Roles/Index.cshtml
+++ b/Admin.Dashboard/Views/Roles/Index.cshtml
@@ -68,7 +68,16 @@
                                         <div class="d-flex justify-content-center align-items-center gap-2 text-center" >
                                                <a class="btn  btn-primary p-2"  asp-action="ManagePermissions" asp-route-roleId="@role.Id">Manage Permissions</a>
                                                     <a class="btn btn-outline-warning " asp-action="Edit" asp-route-roleId="@role.Id">Edit</a>
-                                                    <a class="btn btn-outline-danger" asp-action="Delete" asp-route-roleId="@role.Id">Delete</a>
+                                                    @* <a class="btn btn-outline-danger" 
+                                                       onclick="return confirm('Are you sure you want to delete this role? This action cannot be undone.')"
+                                                        asp-action="Delete" asp-route-roleId="@role.Id">Delete</a> *@
+                                                    <form method="post" asp-action="Delete" asp-controller="Roles" asp-route-roleId="@role.Id">
+                                                        <button type="submit" class="btn btn-outline-danger"
+                                                               onclick="return confirm('Are you sure you want to delete this role? This action cannot be undone.')">
+                                                           Delete
+                                                             
+                                                            </button>
+                                                         </form>
                                         </div>
                                         
                                     </td>
