--- a/Admin.Dashboard/Views/Roles/ManagePermissions.cshtml
+++ b/Admin.Dashboard/Views/Roles/ManagePermissions.cshtml
@@ -68,11 +68,11 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
             </div>
 
-        <div class="card-footer d-flex flex-column flex-md-row gap-3 mt-4 pt-3 border-top">
-            <button type="submit" class="btn btn-primary flex-fill gap-2 order-1 order-md-2">
+        <div class="card-footer d-flex flex-column flex-md-row gap-3 mt-4 pt-3 border-top ">
+            <button type="submit" class="btn btn-primary flex-fill gap-2 order-1 order-md-2 h6">
                 Save
             </button>
-            <a asp-action="Index" class="btn btn-secondary flex-fill gap-2 order-2 order-md-1">
+            <a asp-action="Index" class="btn btn-light flex-fill gap-2 order-2 order-md-1 h6">
                 Cancel
             </a>
 
