Update(Login): Edit on Password Length and Get Locked out Time

--- a/Admin.Dashboard/Views/Auth/Login.cshtml
+++ b/Admin.Dashboard/Views/Auth/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿@model LoginViewModel
 @{
+    ViewBag.Title = "Sign In";
     Layout = null;
 }
 
@@ -9,7 +10,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flexy Free Bootstrap Admin Template by WrapPixel</title>
+  <title>@ViewBag.Title</title>
     <link rel="shortcut icon" type="image/png" href="~/images/storeLogo.jpg" />
   <link rel="stylesheet" href="~/css/styles.min.css" />
 </head>
