--- a/Admin.Dashboard/Views/_ViewImports.cshtml
+++ b/Admin.Dashboard/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Admin.Dashboard
 @using Admin.Dashboard.Models
+@using E_Commerce.Shared.Constants
+@using Microsoft.AspNetCore.Authorization
+@using E_Commerce.Shared.Enums
 @using E_Commerce.Shared.AdminDashboardViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
