--- a/Admin.Dashboard/Views/Roles/Index.cshtml
+++ b/Admin.Dashboard/Views/Roles/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<RoleViewModel>
+@inject IAuthorizationService authorizationService
 @{
     ViewData["Title"] = "Index";
 }
@@ -43,7 +44,10 @@
                     </header>
 
                     @*Partial Form*@
-                    <partial name="_RoleForm" model="new RoleFormViewModel()" />
+                    @if (authorizationService.AuthorizeAsync(User, Permission.Roles.Create).Result.Succeeded)
+                    {
+                        <partial name="_RoleForm" model="new RoleFormViewModel()" />
+                    }
 
                     @if (Model is not null && Model.Any())
                     {
@@ -66,19 +70,27 @@
                                     <td>@role.Name</td>
                                     <td>
                                         <div class="d-flex justify-content-center align-items-center gap-2 text-center" >
-                                               <a class="btn  btn-primary p-2"  asp-action="ManagePermissions" asp-route-roleId="@role.Id">Manage Permissions</a>
-                                                    <a class="btn btn-outline-warning " asp-action="Edit" asp-route-roleId="@role.Id">Edit</a>
-                                                    @* <a class="btn btn-outline-danger" 
-                                                       onclick="return confirm('Are you sure you want to delete this role? This action cannot be undone.')"
-                                                        asp-action="Delete" asp-route-roleId="@role.Id">Delete</a> *@
-                                                    <form method="post" asp-action="Delete" asp-controller="Roles" asp-route-roleId="@role.Id">
-                                                        <button type="submit" class="btn btn-outline-danger"
-                                                               onclick="return confirm('Are you sure you want to delete this role? This action cannot be undone.')">
-                                                           Delete
-                                                             
+                                                    @if (User.IsInRole(Roles.SuperAdmin.ToString()))
+                                                    {
+                                                        <a class="btn  btn-primary p-2"  asp-action="ManagePermissions" asp-route-roleId="@role.Id">Manage Permissions</a>
+                                                    }
+                                                    @if (authorizationService.AuthorizeAsync(User, Permission.Roles.Edit).Result.Succeeded)
+                                                    {
+                                                        <a class="btn btn-outline-warning " asp-action="Edit" asp-route-roleId="@role.Id">Edit</a>
+                                                    }
+                                                    @if (authorizationService.AuthorizeAsync(User, Permission.Roles.Delete).Result.Succeeded)
+                                                    {
+
+
+                                                        <form method="post" asp-action="Delete" asp-controller="Roles" asp-route-roleId="@role.Id">
+                                                            <button type="submit" class="btn btn-outline-danger"
+                                                            onclick="return confirm('Are you sure you want to delete this role? This action cannot be undone.')">
+                                                                Delete
+
                                                             </button>
-                                                         </form>
-                                        </div>
+                                                        </form>
+                                                    }
+                                                </div>
                                         
                                     </td>
                                 </tr>
