feat(auth): implement logout endpoint and UI action

--- a/Admin.Dashboard/Views/Shared/_AdminLayout.cshtml
+++ b/Admin.Dashboard/Views/Shared/_AdminLayout.cshtml
@@ -228,10 +228,13 @@
                         <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
 
                             <li class="nav-item dropdown ">
-                                <a class="nav-link bg-body-secondary"
+                                
+                                <a class="nav-link btn btn-light"
                                 href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                                    aria-expanded="false">
+                                   
                                     <img src="~/images/user.webp" alt="User" width="35" height="35" class="rounded-circle">
+                                    
                                     
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
@@ -248,7 +251,7 @@
                                             <i class="ti ti-list-check fs-6"></i>
                                             <p class="mb-0 fs-3">My Task</p>
                                         </a>
-                                        <a href="./authentication-login.html" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
+                                        <a asp-action="Logout" asp-controller="Auth" class="btn btn-outline-danger mx-3 mt-2 d-block">Logout</a>
                                     </div>
                                 </div>
                             </li>
