feat(AdminDashboard): update user roles for dashboard access

--- a/Admin.Dashboard/Views/Auth/Login.cshtml
+++ b/Admin.Dashboard/Views/Auth/Login.cshtml
@@ -12,7 +12,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>@ViewBag.Title</title>
     <link rel="shortcut icon" type="image/png" href="~/images/storeLogo.jpg" />
+    <link rel="stylesheet" href="~/lib/simplebar/dist/simplebar.css" />
+    <link rel="stylesheet" href="~/css/icons/tabler-icons/tabler-icons.css" />
   <link rel="stylesheet" href="~/css/styles.min.css" />
+
 </head>
 
 <body>
