--- a/Admin.Dashboard/Views/Users/Index.cshtml
+++ b/Admin.Dashboard/Views/Users/Index.cshtml
@@ -81,7 +81,7 @@
                                                     
                                                     @if (HasAccessToEditUser)
                                                     {
-                                                            <a class="btn btn-outline-warning w-100" asp-action="Edit" asp-route-roleId="@user.Id">Edit</a>
+                                                            <a class="btn btn-outline-warning w-100" asp-action="Edit" asp-route-userId="@user.Id">Edit</a>
                                                     }
                                                     @if (HasAccessToDeleteUser)
                                                     {
