--- a/Admin.Dashboard/Views/Auth/Login.cshtml
+++ b/Admin.Dashboard/Views/Auth/Login.cshtml
@@ -38,6 +38,7 @@
                                 @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
                 <form method="post" asp-action="Login" asp-controller="Auth">
+                    @Html.AntiForgeryToken();
                   <div class="mb-3">
                     <label asp-for="Email" class="form-label">Email</label>
                     <input type="email" asp-for="Email" class="form-control" aria-describedby="emailHelp">
@@ -78,6 +79,19 @@
 
   <!-- solar icons -->
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+    @section Scripts{
+        <partial name="_ValidationScriptsPartial" />
+        <script>
+                       $(function () {
+                const token = $('input[name="__RequestVerificationToken"]').val();
+                if (token) {
+                    $.ajaxSetup({
+                        headers: { 'RequestVerificationToken': token }
+                    });
+                }
+            });
+        </script>
+    }
 </body>
 
 </html>
