--- a/Admin.Dashboard/Views/Roles/Index.cshtml
+++ b/Admin.Dashboard/Views/Roles/Index.cshtml
@@ -84,6 +84,7 @@
 
 
                                                         <form method="post" asp-action="Delete" asp-controller="Roles" asp-route-roleId="@role.Id">
+                                                            @Html.AntiForgeryToken();
                                                             <button type="submit" class="btn btn-outline-danger"
                                                             onclick="return confirm('Are you sure you want to delete this role? This action cannot be undone.')">
                                                                 Delete
@@ -122,4 +123,15 @@
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
+    <script>
+                   $(function () {
+            const token = $('input[name="__RequestVerificationToken"]').val();
+             console.log("Anti-forgery token:", token);
+            if (token) {
+                $.ajaxSetup({
+                    headers: { 'RequestVerificationToken': token }
+                });
+            }
+        });
+    </script>
 }
